<resources>
    <string name="app_name">Mobile Energy Storage</string>
    <string name="key_common_setting_label">设置</string>
    <string name="key_common_date_label">2022–10–11 12:24:00</string>
    <string name="format_time" translatable="false">yyyy.MM.dd  HH:mm:ss</string>
    <string name="key_home_short_position_label">空  仓</string>
    <string name="key_home_disabled_label">禁  用</string>
    <string name="key_home_available_battery_label">可用电池</string>
    <string name="device_model">Device Model:</string>
    <string name="key_home_scan_QR_code_tips">扫二维码领换电</string>
    <string name="key_home_consumer_hotline_label">客服电话：</string>
    <string name="key_home_cabinet_number_label">机柜编号：</string>
    <string name="key_home_logo_label">大象换电</string>
    <string name="key_login_admin_login_label">管理员登录</string>
    <string name="key_login_username_label">用户名：</string>
    <string name="key_login_password_label">密&#160;&#160;&#160;&#160;码：</string>
    <string name="key_login_enter_username_tips">请输入用户名</string>
    <string name="key_login_enter_password_tips">请输入密码</string>
    <string name="key_login_login_label">登录</string>
    <string name="key_login_back_to_home_label">返回首页</string>
    <string name="key_warehouse_unit_position_label">仓位</string>
    <string name="key_warehouse_unit_lock_status_label">锁状态</string>
    <string name="key_warehouse_unit_lock_mode_label">锁模式</string>
    <string name="key_warehouse_unit_fire_mode_label">消防模式</string>
    <string name="key_warehouse_unit_battery_in_place_label">电池在位</string>
    <string name="key_warehouse_unit_heating_state_label">加热状态</string>
    <string name="key_warehouse_unit_abnormal_label">异常</string>
    <string name="key_warehouse_unit_operate_label">操作</string>
    <string name="key_warehouse_unit_inPlace_mode_label">在位模式</string>
    <string name="key_warehouse_unit_door_lock_mode_label">门锁模式</string>
    <string name="key_warehouse_unit_fire_extinguisher_mode_label">灭火器模式</string>
    <string name="key_warehouse_unit_normally_open_label">常开</string>
    <string name="key_warehouse_unit_normally_closed_label">常关</string>
    <string name="key_warehouse_unit_Version_number_label">版号</string>
    <string name="key_warehouse_unit_setting_label">设置</string>
    <string name="key_warehouse_unit_one_click_opening_label">一键开仓</string>
    <string name="key_warehouse_unit_query_mode_label">查询模式</string>
    <string name="key_warehouse_unit_query_version_label">查询版本</string>
    <string name="key_warehouse_unit_lift_the_ban_label">解禁</string>
    <string name="key_warehouse_unit_open_a_position_label">开仓</string>
    <string name="key_system_configuration_no_network_restart_label">设置机柜无网络重启</string>
    <string name="key_system_configuration_never_reboot_label">永不重启</string>
    <string name="key_system_configuration_5_minutes_restart_label">无网络5分钟重启</string>
    <string name="key_system_configuration_modify_administrator_pwd_label">修改管理员登录密码</string>
    <string name="key_system_configuration_will_restart_app_label">会重启APP</string>
    <string name="key_system_configuration_modify_device_number_label">修改设备编号</string>
    <string name="key_system_configuration_change_software_settings_label">更改软件设置</string>
    <string name="key_system_configuration_close_software_label">关闭软件</string>
    <string name="key_system_configuration_run_minimized_label">最小化运行</string>
    <string name="key_system_configuration_select_ip_platform_label">选择IP连接平台</string>
    <string name="key_system_configuration_state_grid_label">国网</string>
    <string name="key_system_configuration_P5266_label">P5266</string>
    <string name="key_system_configuration_set_battery_threshold_label">设置换电阈值</string>
    <string name="key_system_configuration_ip_1111_label">1.1.1.1</string>
    <string name="key_system_configuration_custom_ip_address_label">自定义IP地址</string>
    <string name="key_system_configuration_custom_ip_address_tip">IP地址和端口号之间用(,)分开,如192.168.1.2,1234</string>
    <string name="key_system_configuration_modify_customer_phoneNumber_label">修改客服电话</string>
    <string name="key_system_configuration_open_local_debugging_mode_label">是否打开本地调试模式</string>
    <string name="key_system_configuration_open_local_debugging_mode_tips">打开调试模式后，风扇和加热不受实际温度影响，蜂鸣器不受时间影响，无网络状态下机柜不会重启</string>
    <string name="key_system_configuration_closure_label">Close</string>
    <string name="key_system_configuration_turn_on_label">Open</string>
    <string name="key_system_configuration_set_to_speaker_label">设置开启喇叭</string>
    <string name="key_system_configuration_set_to_speaker_tips">开启后，喇叭只会在白天响起(9：00-21：00)</string>
    <string name="key_system_configuration_turn_off_horn_label">关闭喇叭</string>
    <string name="key_system_configuration_turn_on_horn_label">开启喇叭</string>
    <string name="key_system_configuration_test_battery_swap_label">设置进入测试换电IP地址</string>
    <string name="key_system_configuration_test_battery_swap_tips">IP地址和端口号之间(,)分开，如果地址为空,则退出测试换电模式</string>
    <string name="key_system_configuration_heating_working_temperature_label">设置加热工作温度</string>
    <string name="key_system_configuration_heating_working_temperature_tips">注意：启动加热条件只需要满足其中一个，停止加热需要同时满足两个</string>
    <string name="key_system_configuration_lowest_chamber_start_heat_up_label">仓体最低温度开始加热</string>
    <string name="key_system_configuration_minimum_cell_start_heat_up_label">电芯最低温度开始加热</string>
    <string name="key_system_configuration_maximum_chamber_stop_heating_label">仓体最高温度停止加热</string>
    <string name="key_system_configuration_maximum_cell_stop_heating_label">电芯最高温度停止加热</string>
    <string name="key_detection_unit_cabinet_temperature_1_label">柜体温度1：</string>
    <string name="key_detection_unit_cabinet_temperature_2_label">柜体温度2：</string>
    <string name="key_detection_unit_water_intrusion_label">侵水：</string>
    <string name="key_detection_unit_smoke_label">烟感：</string>
    <string name="key_detection_unit_electricity_label">电量：</string>
    <string name="key_detection_unit_voltage_label">电压：</string>
    <string name="key_detection_unit_electric_current_label">电流：</string>
    <string name="key_detection_unit_version_label">版本：</string>
    <string name="key_detection_unit_abnormal_power_failure_label">异常断电控制：</string>
    <string name="key_detection_unit_power_outage_label">断电</string>
    <string name="key_detection_unit_turn_on_label">开启</string>
    <string name="key_detection_unit_extinguish_label">熄灭</string>
    <string name="key_detection_unit_close_label">关闭</string>
    <string name="key_detection_unit_flashlight_label">照明灯：</string>
    <string name="key_detection_unit_heating_test_label">加热测试：</string>
    <string name="key_detection_unit_speaker_volume_test_label">喇叭音量测试：</string>
    <string name="key_charging_unit_battery_sn_code_label">电池SN码：</string>
    <string name="key_charging_unit_electricity_label">电量：</string>
    <string name="key_charging_unit_measured_total_voltage_label">实测总电压：</string>
    <string name="key_charging_unit_number_of_cells_label">电芯数量：</string>
    <string name="key_charging_unit_soh_label">SOH：</string>
    <string name="key_charging_unit_recharging_current_label">充电电流：</string>
    <string name="key_charging_unit_ambient_temperature_label">环境温度：</string>
    <string name="key_charging_unit_minimum_cell_temperature_label">电芯最低温度：</string>
    <string name="key_charging_unit_cell_maximum_temperature_label">电芯最高温度：</string>
    <string name="key_charging_unit_board_temperature_label">板卡温度：</string>
    <string name="key_charging_unit_cell_data_label">电芯数据：</string>
    <string name="key_charging_unit_temperature_label">温度：</string>
    <string name="key_charging_unit_version_label">版本：</string>
    <string name="key_charging_unit_maximum_voltage_label">最高电压：</string>
    <string name="key_charging_unit_minimum_voltage_label">最低电压：</string>
    <string name="key_charging_unit_single_core_differential_pressure_label">单芯压差：</string>
    <string name="key_charging_unit_charger_voltage_label">充电器电压：</string>
    <string name="key_charging_unit_charger_current_label">充电器电流：</string>
    <string name="key_charging_unit_abnormal_battery_label">电池异常：</string>
    <string name="key_manage_sidebar_warehouse_unit_label">仓空单元</string>
    <string name="key_manage_sidebar_detection_unit_label">检测单元</string>
    <string name="key_manage_sidebar_charging_unit_label">充电单元</string>
    <string name="key_manage_sidebar_system_configuration_label">系统配置</string>
    <string name="key_manage_sidebar_back_to_home_label">返回首页</string>
    <string name="key_app_update_content_title">更新内容如下：</string>
    <string name="key_app_update_downloading_btn">正在下载...</string>
    <string name="key_app_update_downloading_tip">正在下载，请稍后…</string>
    <string name="key_app_update_download_failure_tip">下载失败，请切换网络后继续尝试！</string>
    <string name="key_app_update_failed">更新失败</string>
    <string name="key_common_ok">Determine</string>
    <string name="key_common_cancel">Cancel</string>
    <string name="key_app_update_failed_force">更新失败，您必须升级后才能继续使用！</string>
    <string name="key_app_update_has_been_cancel">更新已被取消</string>
    <string name="key_app_update_invite_comment_desc">您的感受对我们很重要，我们渴望听到您的真实声音。</string>
    <string name="key_app_update_invite_comment_dissatisfied_title">不，谢谢</string>
    <string name="key_app_update_invite_comment_satisfied_title">去评价</string>
    <string name="key_app_update_invite_comment_title">邀请您评价</string>
    <string name="key_app_update_invite_never_display">不再显示</string>
    <string name="key_app_update_network_disconnect_tip">网络已断开，等待恢复...</string>
    <string name="key_app_update_start_btn">立即更新</string>
    <string name="text_bms_chang_status">BMS Status:</string>
    <string name="move_text_soc">SOC:</string>
    <string name="move_text_soh">SOH:</string>
    <string name="move_text_battery_nominal_capacity">System Status:</string>
    <string name="move_text_total_vol">Total voltage:</string>
    <string name="move_text_total_cur">Total current:</string>
    <string name="move_text_total_power">Total power:</string>
    <string name="move_text_min_dis_pow">DisPower:</string>
    <string name="text_bms_battery_charge_info">Battery Charge Info:</string>
    <string name="text_bms_charging_mode_out_v">Charging Out Vol:</string>
    <string name="text_bms_charging_mode_out_c">Charging Out Cur:</string>
    <string name="text_bms_charging_mode_out_p">Charging Out Power:</string>
    <string name="text_bms_charge_chg_type">Charge status:</string>
    <string name="text_bms_charge_connect_status">Charge connect status:</string>
    <string name="text_bms_charge_dc_vol">DC Vol:</string>
    <string name="text_bms_charge_dc_cur">DC Cur:</string>
    <string name="text_bms_charge_ac_vol">AC VOl:</string>
    <string name="text_bms_charge_ac_cur">AC Cur:</string>
    <string name="text_bms_charge_ask_vol">Ask Vol:</string>
    <string name="text_bms_charge_asl_cur">Ask Cur:</string>
    <string name="text_bms_charge_soc">SOC:</string>
    <string name="text_bms_charge_temp_1">Temp 1:</string>
    <string name="text_bms_charge_temp_2">Temp 2:</string>
    <string name="text_bms_charge_gun_status">Gun status:</string>
    <string name="text_bms_charge_gun_temp_1">Gun Temperature 1:</string>
    <string name="text_bms_charge_gun_temp_2">Gun Temperature 2:</string>
    <string name="text_bms_charge_gun_cc">Gun CC:</string>
    <string name="text_bms_charge_gun_cp">Gun CP:</string>
    <string name="text_bms_charge_gun_cp_fre">Gun CP Fre:</string>
    <string name="text_bms_charge_gun_cp_duty">Gun CP Duty:</string>
    <string name="text_bms_charge_gun_time">Charging time:</string>
    <string name="text_bms_charge_gun_power">Charging power:</string>
    <string name="text_bms_charge_gun_kwh">Charging kWh:</string>
    <string name="text_charge_stop_reason">Stop Reason:</string>
    <string name="text_bms_charge_Pow">Charging pile Pow:</string>
    <string name="move_bat_max_chg_power">battery max charge pow:</string>
</resources>